--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <section id="overview">
         <h2>Overview</h2>
         <img id="barton springs" src="bartonsprings.jpg" alt="Barton Springs" width="800" />
-        <p>	This website shows an surface level analysis of the Barton Springs’ salamander habitat that is further explained in our report  by investigating the relationship between water quality parameters and the population sizes of Barton Springs Salamanders in Austin, Texas. This exploration hopes to quantify the ideal habitat for salamander growth unique to Barton Springs, making it conducive to the thriving of the population and the 
+        <p>	This website shows an surface level analysis of the Barton Springs’ salamander habitat that is further explained in our report  by investigating the relationship between water quality parameters and the population sizes of Barton Springs Salamanders in Austin, Texas. This exploration hopes to quantify the ideal habitat for salamander growth unique to Barton Springs, making it conducive to the thriving of the population. Image from NYTimes.  
 </p>
     </section>
 
